[gd_scene load_steps=3 format=2]

[ext_resource path="res://elements/NewButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/GoodsPanel.gd" type="Script" id=2]

[node name="Goods" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="NewGood" parent="VBoxContainer/Buttons" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 75.0
margin_bottom = 30.0
text = "+ Good"

[node name="GoodsTree" type="Tree" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
allow_reselect = true
hide_root = true

[connection signal="pressed" from="VBoxContainer/Buttons/NewGood" to="." method="_on_NewGood_pressed"]
[connection signal="item_edited" from="VBoxContainer/GoodsTree" to="." method="_on_GoodsTree_item_edited"]
